force-app/main/default/objects/Related_Work_Order__c/Related_Work_Order__c.object-meta.xml
<CustomObject>
    <label>Related Work Order</label>
    <nameField>
        <label>Related Work Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Work Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>