force-app/main/default/objects/Related_Work_Order__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>WorkOrder__r.EndDate</formula>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>