force-app/main/default/objects/Related_Work_Order__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <formula>Text(WorkOrder__r.Line_of_Business__c)</formula>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>