force-app/main/default/objects/Related_Work_Order__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <formula>WorkOrder__r.StartDate</formula>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>